--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '6.x'  # Adjust for .NET 6.x version
+        dotnet-version: '8.x'  # Adjust for .NET 6.x version
 
     - name: Restore dependencies
       run: dotnet restore
@@ -55,7 +55,7 @@ jobs:
       shell: pwsh
       run: |
         $msdeployPath = "C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe"
-        $artifactPath = "C:\Users\sahil\source\repos\dotnetcore-sms\artifact.zip"
+        $artifactPath = "C:\Users\sahil\source\repos\dotnetcore-sms"
 
         $username = "sahil"
         $password = "Nair1234567890"
