--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
         $username = "sahil"
         $password = "Nair1234567890"  # Replace with actual password
         $destContentPath = "Test"
-        $computerName = "https://20.5.240.49:8172/msdeploy.axd"
+        $serverUrl = "https://20.5.240.49:8172/msdeploy.axd
 
         Write-Output "Username: $username"
         Write-Output "Artifact Path: $artifactPath"
@@ -70,7 +70,7 @@ jobs:
             & $msdeployPath `
               -verb:sync `
               -source:package=$artifactPath `
-              -dest:contentPath=$destContentPath,computerName=$computerName,username=$username,password=$password,authType=Basic `
+              -dest:contentPath=$destContentPath,computerName=$serverUrl,username=$username,password=$password,authType=Basic `
               -allowUntrusted `
               -verbose
           } else {
