--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,10 +65,10 @@ jobs:
             & $msdeployPath `
               -verb:sync `
               -source:package="$artifactPath" `
-              -dest:contentPath="Test", `
-              -computerName="https://20.5.240.49:8172/msdeploy.axd", `
-              -username="sahil", `
-              -password="Nair1234567890", `
+              -dest:contentPath="Test" `
+              -computerName="https://20.5.240.49:8172/msdeploy.axd" `
+              -username="sahil" `
+              -password="Nair1234567890" `
               -authType="Basic" `
               -allowUntrusted `
               -verbose
