--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
       shell: pwsh
       run: |
         $msdeployPath = "C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe"
-        $artifactPath = "${{ github.workspace }}\artifact\artifact.zip"
+        $artifactPath = "$env:GITHUB_WORKSPACE\artifact\artifact.zip"
 
         Write-Output "Username: sahil"
         Write-Output "Artifact Path: $artifactPath"
@@ -66,7 +66,7 @@ jobs:
               -verb:sync `
               -source:package="$artifactPath" `
               -dest:contentPath="Test" `
-              -computerName="https://20.5.240.49:8172/msdeploy.axd" `
+              -computerName:"https://20.5.240.49:8172/msdeploy.axd" `
               -username="sahil" `
               -password="Nair1234567890" `
               -authType="Basic" `
