--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Create artifact.zip
       run: |
-        Compress-Archive -Path ./publish/* -DestinationPath ./artifact.zip
+        Compress-Archive -Path ./publish/* -DestinationPath ./artifact/artifact.zip
 
     - name: Upload artifact for deployment
       uses: actions/upload-artifact@v3
