--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,18 +64,9 @@ jobs:
         if (Test-Path $msdeployPath) {
           # Check if the artifact exists
           if (Test-Path $artifactPath) {
-            $destArgs = @(
-              "-verb:sync"
-              "-source:package=$artifactPath"
-              "-dest:auto"
-              "-dest:computername=https://vm01:8172/msdeploy.axd"
-              "-dest:username=sahil"
-              "-dest:password=Nair1234567890"
-              "-dest:authType=Basic"
-              "-dest:allowUntrusted"
-              "-dest:verbose"
-            )
-            & "$msdeployPath" $destArgs
+            # Combine all the destination parameters into a single -dest argument
+            $destArgs = "-dest:auto,computername=https://vm01:8172/msdeploy.axd,username=sahil,password=Nair1234567890,authType=Basic,allowUntrusted,verbose"
+            & "$msdeployPath" -verb:sync -source:package=$artifactPath $destArgs
           } else {
             Write-Error "Artifact not found at $artifactPath. Please check the download path and verify the artifact name."
           }
