--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
             # Define the msdeploy arguments
             $msdeployArgs = @(
               "-source:package=$artifactPath"
-              "-dest:computername=https://vm01:8172/msdeploy.axd,username=sahil,password=Nair1234567890,authType=Basic"
+              "-dest:contentPath=C:\inetpub\wwwroot,computername=https://vm01:8172/msdeploy.axd,username=sahil,password=Nair1234567890,authType=Basic"
               "-verb:sync"
               "-retryAttempts=2"
               "-disableLink:AppPoolExtension"
